tests/uncompilable_examples/twice_used_field_type.rs
use variant_access_derive::*;

#[derive(VariantAccess)]
enum Enum {
    F1(bool),
    F2(bool)
}

fn main() {

}